Closed Bug 1706433 Opened 5 years ago Closed 5 years ago

Native context menus open at the wrong position if layout.css.devPixelsPerPx is overridden

Categories

(Core :: Widget: Cocoa, defect, P3)

All
macOS
defect

Tracking

()

VERIFIED FIXED
90 Branch
Tracking Status
firefox89 --- verified
firefox90 --- verified

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Whiteboard: [proton-context-menus][mac:mr1] [proton-uplift])

Attachments

(1 file)

We have a pref called layout.css.devPixelsPerPx which can be used to scale the UI, mostly for testing purposes. When this pref is set to a non-default value, native context menus are opened in the wrong place.
This is very minor but still worth fixing.

Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/cff022a513d1 Convert native context menu coordinates correctly; aXPos/aYPos are in CSS pixels. r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Whiteboard: [proton-context-menus][mac:mr1] → [proton-context-menus][mac:mr1] [proton-uplift]

Verified that context menu is correctly displayed when having a non-default value to layout.css.devPixelsPerPx pref in Firefox 89.0b13 and latest Nightly 90.0a1 using macOS 11.3.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: