Bug 1706433 - Convert native context menu coordinates correctly; aXPos/aYPos are in CSS pixels. r=tnikkel a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D112803